--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "@types/validator": "^13.11.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "dotenv": "^16.3.1",
     "encoding": "^0.1.13",
     "firebase": "^10.4.0",
     "lucide-react": "^0.284.0",
     "next": "13.5.4",
     "next-themes": "^0.2.1",
+    "openai": "^4.11.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
